# gazebo-stuff

./: .gitignore  Readme.md
models/b_pot/: b_pot.dae
models/b_small_knife/: b_small_knife.dae
models/box/: model.config
models/butter_box/: model.sdf
models/frying_pan/: model-grid.sph  model-hubbard.sph  model-medial.sph  model-octree.sph  model.config  model.dae  model.sdf  model.sph  model2.dae  model3.dae  model_mesh.sdf  model_sph.sdf
models/gripper/: model.config  model.sdf
models/iai_big_bowl/: model.config  model.sdf
models/iai_spatula/: model.config  model.sdf
models/knife/: knife.sdf  model.config  model.dae  model.sdf
models/ladle/: mesh.dae  model.config  model.sdf
models/simple_frying_pan/: mesh.dae  model.config  model.sdf  source.dae  source.stl  source_scaled.dae
models/simple_knife/: mesh.dae  model.config  model.sdf  source.stl  source_scaled.ply
models/spatula/: model.config  model.dae  model.sdf
plugins/: BoxFactoryPlugin.cc  BoxFactoryPlugin.hh  ButterFactoryPlugin.cc  ButterFactoryPlugin.hh  ButterPlugin.cc  ButterPlugin.hh  CMakeLists.txt  GrainsFactoryPlugin.cc  GripPlugin.cc  GripPlugin.hh  LasagnaFactoryPlugin.cc  PR2GripperGripPlugin.cc  PR2GripperGripPlugin.hh  ScrapePlugin.cc  ScrapePlugin.hh  ShpereContainerFactoryPlugin.cc  ShpereContainerFactoryPlugin.hh  StickPlugin.cc  StickPlugin.hh  StickyPlugin.cc  StickyPlugin.hh  SwingPlugin.cc  SwingPlugin.hh
plugins/butter/: ButterFactoryPlugin.cc  CMakeLists.txt  butter.cc
plugins/sticky/: StickyPlugin.cc  StickyPlugin.hh
plugins/swing/: CMakeLists.txt  SwingPlugin.cc  swing.cc
utilities/: CMakeLists.txt  sph2sdf.cpp  test.sdf  test.sph
worlds/: butter_spheres.world  knife.world  scraping.world
